issue: Add new issue button at issue view page

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3215,6 +3215,12 @@ div.markdown-preview {
     padding:15px 0 0 52px;
     &.affix { top: 0; width:219px; }
 
+    .project-btn-item {
+        a {
+            width: 196px;
+            margin-bottom: 15px;
+        }
+    }
     dl {
         margin-bottom:20px;
 
