--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3476,6 +3476,7 @@ div.markdown-preview {
         li:last-child {
             border:none;
         }
+        clear: both;
     }
 
     .label-notice {
@@ -6455,7 +6456,7 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
       width: 100% !important;
 }
 
-.board-labels {
+#option_form > .board-labels {
   width: 400px;
   min-width: 120px;
   display: inline-block;
