--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -17,7 +17,7 @@
   font-size: 1.15em;
   clear: both;
   overflow: auto;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Malgun Gothic", "Helvetica Neue", "Apple SD Gothic Neo", "Nanum Barun Gothic Light", "Nanum Barun Gothic", sans-serif;
+  font-family: @base-font-family;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
   -webkit-font-feature-settings: "kern" 1;
