watcher-list: Remove watcher list button in case of only me

--- a/app/views/board/view.scala.html
+++ b/app/views/board/view.scala.html
@@ -213,7 +213,7 @@
             var watcherApiUrl = "@api.routes.WatcherApi.getWatchers(project.owner, project.name, post.getNumber)?type=posts";
             $("#watch-button").on('click', function () {
                 setTimeout(function () {
-                    watcherListApi(watcherApiUrl);
+                    watcherListApi(watcherApiUrl, "@routes.UserApp.userInfo(UserApp.currentUser().loginId)");
                 }, 1000);
             });
             watcherListApi(watcherApiUrl);
