--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -165,7 +165,8 @@
   }
   img{
     max-width:100%;
-    margin:10px 0; padding: 10px;
+    margin:10px 0;
+    padding: 5px;
     border:1px solid rgba(0,0,0,0.1);
     .box-shadow(2px 2px 5px rgba(0,0,0,0.15));
     .box-sizing(border-box);
