--- a/app/views/common/scripts.scala.html
+++ b/app/views/common/scripts.scala.html
@@ -1,22 +1,8 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2012 NAVER Corp.
-* http://yobi.io
-*
-* @author Sangcheol Hwang
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp.
+* https://yona.io
 **@
 @()
 @import utils.TemplateHelper._
@@ -168,6 +154,18 @@
         $('a[class="title"]').on('click', function(){
             NProgress.set(0.7);
             NProgress.start();
+        });
+
+        // judge whether contents link is internal or external
+        $('.markdown-wrap').find('a[href]').each(function () {
+            var $link = $(this);
+            var linkUrl = $link.attr("href");
+            if (linkUrl && linkUrl.match("^[^./#]")) {
+                var location = window.location;
+                if (linkUrl.indexOf(location.protocol + "//" + location.host) !== 0) {
+                    $(this).attr("target", "_blank");
+                }
+            }
         });
     });
 </script>
