--- a/app/views/reviewthread/list.scala.html
+++ b/app/views/reviewthread/list.scala.html
@@ -1,27 +1,16 @@
 @**
- * Yobi, Project Hosting SW
- *
- * Copyright 2014 NAVER Corp.
- * http://yobi.io
- *
- * @author Keesun Baik
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *   http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- **@
-@(project:Project, page:com.avaje.ebean.Page[CommentThread], param:models.support.ReviewSearchCondition)
+* Yona, 21st Century Project Hosting SW
+*
+* Copyright Yona & Yobi Authors & NAVER Corp.
+* https://yona.io
+**@
+@import com.avaje.ebean.Page
+@import models.support.ReviewSearchCondition
+@(project:Project, page:Page[CommentThread], param:ReviewSearchCondition)
 @import views.html.helper.form
 @import utils.TemplateHelper._
 @import utils.JodaDateUtil
+@import utils.HttpUtil._
 
 @makeSortLink(sortField:String, sortFieldString:String) = {
     @if(param.orderBy == sortField) {
@@ -96,6 +85,11 @@
             </ul>
             <div class="review-list-wrap">
                 @partial_list(project, page, param)
+            </div>
+            <div class="pull-left" style="padding:10px;">
+                <a href="@addQueryString(removeQueryString(requestHeader.uri, "pageNum"), "format=xls")" class="ybtn small">
+                    <i class="yobicon-file-excel"></i> @Messages("issue.downloadAsExcel")
+                </a>
             </div>
             <div id="pagination"></div>
         </div>
