home: Change project listup ui at login home

--- a/app/assets/stylesheets/less/_reponsive.less
+++ b/app/assets/stylesheets/less/_reponsive.less
@@ -427,6 +427,11 @@
 }
 
 @media all and (max-width:1199px){
+    .user-project-list{
+        .project-name {
+          max-width: 220px !important;
+        }
+    }
     .attachment-files {
         font-size: 12px;
         .attachment-files-header {
