--- a/app/views/layout.scala.html
+++ b/app/views/layout.scala.html
@@ -28,6 +28,7 @@
 <link rel="stylesheet" type="text/css" media="all" href="@routes.Assets.at("javascripts/lib/select2/select2.css")"/>
 <link rel="stylesheet" type="text/css" media="all" href="@routes.Assets.at("javascripts/lib/pikaday/pikaday.css")" />
 <link rel="stylesheet" type="text/css" media="all" href="@routes.Assets.at("stylesheets/yobi.css")">
+<link rel="stylesheet" type="text/css" media="all" href="@routes.Assets.at("stylesheets/list.css")">
 <link rel='stylesheet' href="@routes.Assets.at("javascripts/lib/nprogress/nprogress.css")"/>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/yona-layout.js")"></script>
 
